# AppClining

./: README.md  build.gradle.kts
diagrams/: Activity.md  Class.md  Component and deployment.md  Sequence.md  State.md  Use case.md
docs/: SRS  SRS.md
docs/tests/: testPlan.md  testResult.md
src/androidTest/java/com/example/appforfun/: ExampleInstrumentedTest.kt
src/main/: AndroidManifest.xml
src/main/java/com/example/appforfun/: ActivityProfile.kt  AuthorizeActivity.kt  CMakeLists.txt  CartActivity.kt  CartAdapter.kt  CartItem.kt  DataHelper.kt  DataOrder.kt  ItemActivity.kt  MainActivity.kt  Order.kt  OrderAdapter.kt  OrderHistoryActivity.kt  Services.kt  ServicesActivity.kt  ServicesAdapter.kt  User.kt  appforfun.cpp
src/main/res/layout/: activity_authorize.xml  activity_cart.xml  activity_item.xml  activity_main.xml  activity_order_history.xml  activity_profile.xml  activity_services.xml  item_cart.xml  item_order.xml  item_services.xml
src/main/res/menu/: context_menu.xml
src/main/res/mipmap-anydpi-v26/: ic_launcher_icon_ava.xml  ic_launcher_icon_women.xml
src/main/res/values/: ic_launcher_icon_ava_background.xml  ic_launcher_icon_women_background.xml  preloaded_fonts.xml  strings.xml  themes.xml
src/main/res/values-night/: themes.xml
src/test/java/com/example/appforfun/: ExampleUnitTest.kt
